slight edit of conclusion to clean up

--- a/ms.tex
+++ b/ms.tex
@@ -679,15 +679,9 @@ We estimate the population of RGHJs within 100 pc to be order of 1000, based on 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Will the electron spiraling and offset the magnetic field? (Mehrdad Mirababayi)}
 \label{ss:offset}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\citet{gorman2013}
-
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\subsection{}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Conclusions}
@@ -702,19 +696,8 @@ This energy level would be detectable with LWA between 10~MHz abd 100~MHz or wit
 
 The planetary magnetic moment is computed based on the simple scaling relationship given by \citep{christensen2010}. 
 
-
-The radio emission due to the interaction between the planetary companion and the stellar wind would be brighter than the intrinsic radio emission from the host star. 
-
-The candidate radio detectors sensitive to the radio emission from 10~MHz to 1~GHz are LWA are SKA. For LWA, 
-
-This is above the detection limit of the 
-
-Non-detection 
-
-
-For planets around AGB stars, be
-, which provides us to 
-
+-about detectability
+-number of evolved stars within 100pc $\sim 1000$. 
 
 \vspace{0.5in}
 
