references for mass-loss rate added

--- a/biblio.bib
+++ b/biblio.bib
@@ -2,12 +2,89 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Yuka Fujii at 2015-05-17 17:13:20 +0900 
+%% Created for Yuka Fujii at 2015-05-20 11:35:24 +0900 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{schild1989,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1989MNRAS.240...63S},
+	Author = {{Schild}, H.},
+	Date-Added = {2015-05-20 02:35:14 +0000},
+	Date-Modified = {2015-05-20 02:35:21 +0000},
+	Journal = {\mnras},
+	Keywords = {Asymptotic Giant Branch Stars, Infrared Stars, Mira Variables, Stellar Evolution, Stellar Mass Ejection, Symbiotic Stars, Hydroxyl Radicals, Planetary Nebulae, Stellar Envelopes, Stellar Winds},
+	Month = sep,
+	Pages = {63-68},
+	Title = {{AGB stellar evolution and symbiotic stars}},
+	Volume = 240,
+	Year = 1989}
+
+@article{vanloon2005,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2005A%26A...438..273V},
+	Author = {{van Loon}, J.~T. and {Cioni}, M.-R.~L. and {Zijlstra}, A.~A. and {Loup}, C.},
+	Date-Added = {2015-05-20 02:30:42 +0000},
+	Date-Modified = {2015-05-20 02:30:49 +0000},
+	Doi = {10.1051/0004-6361:20042555},
+	Eprint = {astro-ph/0504379},
+	Journal = {\aap},
+	Keywords = {stars: AGB and post-AGB, stars: carbon, stars: mass-loss, supergiants, Magellanic Clouds, infrared: stars},
+	Month = jul,
+	Pages = {273-289},
+	Title = {{An empirical formula for the mass-loss rates of dust-enshrouded red supergiants and oxygen-rich Asymptotic Giant Branch stars}},
+	Volume = 438,
+	Year = 2005,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1051/0004-6361:20042555}}
+
+@article{reimers1975,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1975MSRSL...8..369R},
+	Author = {{Reimers}, D.},
+	Date-Added = {2015-05-20 02:16:10 +0000},
+	Date-Modified = {2015-05-20 02:16:18 +0000},
+	Journal = {Memoires of the Societe Royale des Sciences de Liege},
+	Keywords = {Absorption Spectra, Giant Stars, Line Spectra, M Stars, Stellar Envelopes, Stellar Mass Ejection, Doppler Effect, Ionization, K Lines, Spectral Line Width, Stellar Evolution, Stellar Spectra, Velocity Distribution},
+	Pages = {369-382},
+	Title = {{Circumstellar absorption lines and mass loss from red giants}},
+	Volume = 8,
+	Year = 1975}
+
+@article{vassiliadis1993,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1993ApJ...413..641V},
+	Author = {{Vassiliadis}, E. and {Wood}, P.~R.},
+	Date-Added = {2015-05-20 02:03:17 +0000},
+	Date-Modified = {2015-05-20 02:03:35 +0000},
+	Doi = {10.1086/173033},
+	Journal = {\apj},
+	Keywords = {Asymptotic Giant Branch Stars, Metallicity, Stellar Evolution, Stellar Mass Ejection, Stellar Luminosity, Stellar Mass, Stellar Winds},
+	Month = aug,
+	Pages = {641-657},
+	Title = {{Evolution of low- and intermediate-mass stars to the end of the asymptotic giant branch with mass loss}},
+	Volume = 413,
+	Year = 1993,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1086/173033}}
+
+@article{schoier2001,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2001A%26A...368..969S},
+	Author = {{Sch{\"o}ier}, F.~L. and {Olofsson}, H.},
+	Date-Added = {2015-05-20 02:00:36 +0000},
+	Date-Modified = {2015-05-20 02:00:49 +0000},
+	Doi = {10.1051/0004-6361:20010072},
+	Eprint = {astro-ph/0101477},
+	Journal = {\aap},
+	Keywords = {STARS: AGB AND POST-AGB, STARS: CARBON, CIRCUMSTELLAR MATTER, STARS: LATE-TYPE, RADIO LINES: STARS},
+	Month = mar,
+	Pages = {969-993},
+	Title = {{Models of circumstellar molecular radio line emission. Mass loss rates for a sample of bright carbon stars}},
+	Volume = 368,
+	Year = 2001,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1051/0004-6361:20010072}}
 
 @article{griesmeier2004,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
