--- a/ms.tex
+++ b/ms.tex
@@ -166,9 +166,8 @@ When stars less than $\sim$8~$M_\sun$ evolve off the main sequence,
 they go through stages on the red-giant branch (RGB) and the
 asymptotic-giant branch (AGB) where their radii and luminosities increase by orders of magnitude. 
 Jovian planets in orbit around such stars can be transiently heated to hot-Jupiter temperatures ($\sim$1000~K or more) at distances out to tens of AU, depending on the star's mass \citep{spiegel+madhusudhan2012}. 
-At the same time, they are subject to massive (but slow) stellar wind, as the mass-loss rate of such evolved stars are significantly higher than the main-sequence counterparts, typically $\sim  10^{-8} M_{\odot }$/yr \citep{judge1991}. 
-The mass-loss rate can be as high as $\sim  10^{-5} M_{\odot }$/yr for AGB stars. 
-\memoYF{to Jason: how these values are observationally obtained? Suggestions for relevant references?} 
+At the same time, they are subject to massive (but slow) stellar wind, as the mass-loss rate of such evolved stars are significantly higher than the main-sequence counterparts, ranging from $\sim  10^{-8} M_{\odot }$/yr to $\sim  10^{-5} M_{\odot }$/yr with the highest values for AGB stars \citep[e.g.,][]{reimers1975,schild1989,vassiliadis1993,schoier2001,vanloon2005}, significantly larger than solar mass-loss rate $\sim 10^{-14}M_{\odot }$/yr. 
+%\memoYF{to Jason: how these values are observationally obtained? Suggestions for relevant references?} 
 %stellar wind \citep{suzuki2008} \memoYF{To Jason: references?}. 
 On the assumption that the radio emission is correlated with the stellar wind, planetary companions around evolved stars could generate bright radio emission. 
 
